[package]
name = "loom-pool-loader-simplified"
version = "0.1.0"
edition = "2021"

[dependencies]
# Alloy - 以太坊库
alloy = { version = "0.8", features = ["full", "node-bindings", "rpc-types-eth"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 错误处理
eyre = "0.6"
thiserror = "2.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具
lazy_static = "1.4"
